--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.10'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
     implementation('org.apache.commons:commons-math:2.0')
+    implementation('org.mapstruct:mapstruct:1.3.1.Final')
+    annotationProcessor('org.mapstruct:mapstruct-processor:1.3.1.Final')
 
     testImplementation(platform("org.springframework.boot:spring-boot-dependencies:2.1.8.RELEASE"))
     testImplementation("org.springframework.boot:spring-boot-starter-test")
