--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ dependencies {
     implementation('org.apache.commons:commons-math:2.0')
     implementation('org.mapstruct:mapstruct:1.3.1.Final')
     annotationProcessor('org.mapstruct:mapstruct-processor:1.3.1.Final')
+    implementation('org.apache.commons:commons-lang3:3.9')
+    implementation('com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.10.0')
+    implementation('com.fasterxml.jackson.core:jackson-core:2.10.0')
+    implementation('org.apache.httpcomponents:httpclient:4.5.10')
 
     testImplementation(platform("org.springframework.boot:spring-boot-dependencies:2.1.8.RELEASE"))
     testImplementation("org.springframework.boot:spring-boot-starter-test")
