--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'java'
     id("com.github.kt3k.coveralls") version "2.8.4"
     id("com.palantir.docker-run") version "0.22.1"
+    id('com.moowork.node') version "1.3.1"
 }
 //apply(from = "gradle/git-version-data.gradle")
 //apply(from = "gradle/build-scan-data.gradle")
@@ -73,6 +74,27 @@ tasks {
             setArgsString("--spring.profiles.active=postgres")
         }
     }
+
+    node {
+        // Version of node to use.
+        version = '4.4.5'
+
+        // Version of npm to use.
+        npmVersion = '3.9.2'
+
+        // Base URL for fetching node distributions (change if you have a mirror).
+        distBaseUrl = 'https://nodejs.org/dist'
+
+        // If true, it will download node using above parameters.
+        // If false, it will try to use globally installed node.
+        download = true
+
+        // Set the work directory for unpacking node
+        workDir = file("${project.buildDir}/nodejs")
+
+        // Set the work directory where node_modules should be located
+        nodeModulesDir = file("${project.projectDir}")
+    }
 }
 
 dockerRun {
@@ -91,3 +113,9 @@ buildScan {
 
     publishAlways()
 }
+
+task webpack(type: NodeTask, dependsOn: 'npmInstall') {
+    script = project.file('node_modules/.bin/webpack')
+}
+
+build.dependsOn(npm_install)
