--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation(platform("org.springframework.boot:spring-boot-dependencies:2.2.1.RELEASE"))
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation('org.springframework.boot:spring-boot-starter-websocket')
     implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
     implementation("org.hsqldb:hsqldb:2.3.3")
     implementation("javax.xml.bind:jaxb-api:2.2.11")
