--- a/src/main/resources/application-postgres.yml
+++ b/src/main/resources/application-postgres.yml
@@ -3,7 +3,7 @@ spring:
     hibernate:
       ddl-auto: none
   datasource:
-    url: jdbc:postgresql://localhost:5000/quotedb
+    url: jdbc:postgresql://quotedb:5432/quotedb
     username: postgres
     password: quotedb
 #    url: jdbc:postgresql://localhost:5432/spring-boot-heroku-example
