--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,7 +6,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: false
+    show-sql: true
   datasource:
 #    url: jdbc:postgresql://quotedb:5432/quotedb
     url: jdbc:postgresql://localhost:5000/quotedb
