--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,6 +6,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        use_sql_comments: true
     show-sql: true
   datasource:
 #    url: jdbc:postgresql://quotedb:5432/quotedb
